--- a/src/main/webapp/Style.css
+++ b/src/main/webapp/Style.css
@@ -1,70 +1,76 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-:root{
+:root {
 	black: #000000;
-	gray: #808080;	
+	gray: #808080;
 }
 
 .avatar {
-    vertical-align: middle;
-    width: 1.875rem; 
-    height: 1.875rem; 
-    border-radius: 50%;
+	vertical-align: middle;
+	width: 1.875rem;
+	height: 1.875rem;
+	border-radius: 50%;
 }
 
 body {
-    min-height: 100vh;
-    background-color: #fff;
+	min-height: 100vh;
+	background-color: #fff;
 }
 
 .navbar {
-    width: 15.625rem; 
-    height: 6.25rem; 
-    position: fixed;
-    margin-left: -18.75rem; 
-    transition: 0.4s;
+	width: 15.625rem;
+	height: 100rem;
+	position: fixed;
+	margin-left: -18.75rem;
+	transition: 0.4s;
 }
 
-.nav-link {
-    font-size: 1.25rem; 
-
-.dropdown-menu {
-    background-color: var(gray);
-}
-
-.dropdown-item:active,
-.dropdown-item:focus,
+.dropdown-item:active, 
+.dropdown-item:focus, 
 .dropdown-item:hover {
-    background-color: var(gray);
+	background-color: var(gray);
 }
 
 .my-container {
-    transition: 0.4s;
+	transition: 0.4s;
 }
 
-/* for navbar */
 .active-nav {
-    margin-left: 0;
+	margin-left: 0;
 }
 
-/* for main section */
 .active-cont {
-    margin-left: 15.625rem; 
+	margin-left: 15.625rem;
 }
 
 #menu-btn {
-    background-color: var(black);
-    color: #fff;
+	background-color: var(black);
+	color: #fff;
 }
 
 #menu-btn:focus {
-    box-shadow: 0 0 0 0.15625rem #7952b344; 
+	box-shadow: 0 0 0 0.15625rem #7952b344;
 }
 
 .topnav-right {
-    margin-right: 0.625rem; 
+	margin-right: 0.625rem;
+}
+
+.margin-left {
+	margin-left: 0.625rem;
+}
+
+.ml-2.813 {
+	margin-left: 2.813rem
+}
+
+.column-gap{
+	column-gap: 1rem;
+}
+.ht-2.5{
+	height: 2.5rem
 }
